В классе WriterFileImpl в 13 строке заменен аргумент на Paths.get(dst)